[gd_scene load_steps=9 format=3 uid="uid://bs2wlm2ok2sox"]

[ext_resource type="Script" path="res://scripts/enemies/purple_slime.gd" id="1_j3akc"]
[ext_resource type="Texture2D" uid="uid://diyffmpmeym6w" path="res://assets/sprites/slime_purple.png" id="2_m455c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_87das"]
atlas = ExtResource("2_m455c")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hual"]
atlas = ExtResource("2_m455c")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2chr"]
atlas = ExtResource("2_m455c")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0etmt"]
atlas = ExtResource("2_m455c")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_pih16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87das")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hual")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2chr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0etmt")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv41y"]
size = Vector2(10, 12)

[node name="PurpleSlime" type="Node2D"]
script = ExtResource("1_j3akc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_pih16")
autoplay = "default"
frame = 2
frame_progress = 0.0921357

[node name="DamageZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_sv41y")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[connection signal="body_entered" from="DamageZone" to="." method="_on_damage_zone_body_entered"]
